Closed Bug 230522 Opened 22 years ago Closed 22 years ago

warning C4047: 'return' : 'foo *' differs in levels of in direction from 'int'

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

Microsoft (R) 32-bit C/C++ Optimizing Compiler Version 13.00.9466 for 80x86 Copyright (C) Microsoft Corporation 1984-2001. All rights reserved. r:/mozilla\js\src\jsparse.c(920) : warning C4047: 'return' : 'JSParseNode *' differs in levels of in direction from 'int' r:/mozilla\js\src\jsregexp.c(2363) : warning C4047: 'return' : 'REMatchState *' differs in levels of indirection from 'int'
Attachment #138707 - Flags: review?(brendan)
Comment on attachment 138707 [details] [diff] [review] change JS_FALSE to NULL Sure, rs=me -- thanks for fixing this. /be
Attachment #138707 - Flags: review?(brendan) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Flags: testcase-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: