Bug 230522 warning C4047: 'return' : 'foo *' differs in levels of in direction from 'int' rs=brendan